# liquid-haskell-demo

./: .gitignore  cabal.project  default.nix  flake.nix
liquid-haskell/: liquid-haskell.cabal
liquid-haskell-app/: Intro.hs  hie.yaml  liquid-haskell-app.cabal  result
